# QExtract_Infer

./: .gitignore  README.md  Report.md  benchmark_results.txt  build_log.txt  energy_results.txt  idea.md  pyproject.toml  setup.py
benchmarks/: bench_e2e.py  bench_energy.py  bench_kernels.py  dataset_loader.py  profile_ncu.ps1
csrc/: binding.cpp
csrc/include/: common.h  quantize_utils.h  ring_buffer.h
csrc/kernels/: rmsnorm.cu  swiglu.cu  w4a16_lora_gemv.cu
csrc/kv_cache/: ring_buffer.cu
qextract/: __init__.py  energy.py  kv_cache.py  patch.py
tests/: conftest.py  test_kv_cache.py  test_rmsnorm.py  test_swiglu.py  test_w4a16_gemv.py
