[build-system]
requires = ["setuptools>=68.0", "wheel", "torch>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qextract-infer"
version = "0.1.0"
description = "面向长文本信息抽取的 QLoRA 极致融合与极简流式推理微内核"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "QExtract Team"}]

dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "pynvml>=11.5",
    "safetensors>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "auto-gptq>=0.7",
]
benchmark = [
    "tabulate>=0.9",
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
include = ["qextract*"]
